<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.themovieapp.MainActivity">
    <item
        android:id="@+id/action_popular"
        android:orderInCategory="100"
        android:title="@string/string_popular"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_name"/>
    <item
        android:id="@+id/action_toprated"
        android:orderInCategory="100"
        android:title="@string/string_toprated"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_name"/>
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="101"
        android:title="@string/favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="102"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
