<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.themovieapp.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_backdrop_height"
                android:layout_marginTop="50dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="7dp"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/details_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/movie_title"
                                android:textSize="@dimen/label_size" />

                            <TextView
                                android:id="@+id/movie_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/backdrop_title"
                                android:textSize="@dimen/data_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/releaseDate_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/releasedate_title"
                                android:textSize="@dimen/label_size" />

                            <TextView
                                android:id="@+id/releaseDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/backdrop_title"
                                android:textSize="@dimen/data_size" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/rating_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/rating_title"
                                android:textSize="@dimen/label_size" />

                            <TextView
                                android:id="@+id/rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/backdrop_title"
                                android:textSize="@dimen/data_size" />

                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">

                            <TextView
                                android:id="@+id/synopsis_label"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/Synopsis_title"
                                android:textSize="@dimen/label_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/synopsis"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="Widget to your layout and place other UI widgets like TextViews, ImageViews inside it. You can notice that the below CardView widget contains a single"
                                    android:textSize="@dimen/synposis_size" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <!-- this for the watch video -->

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:onClick="ReadReview">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="Read Movie Review"
                            android:textSize="24dp"
                            android:layout_weight="2"
                            android:gravity="center"/>

                        <ImageView
                            android:id="@+id/imagereadmore"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/more"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!-- end of the read more review -->

            <!-- this for the watch video -->

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:onClick="PlayTrailer">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="Watch Movie Trailer"
                            android:textSize="24dp"
                            android:layout_weight="2"
                            android:gravity="center"/>

                        <ImageView
                            android:id="@+id/imagewatchtrailer"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/playvideo"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <!-- end of the watch video -->

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:layout_anchor="@id/details_content"
        android:src="@drawable/start_outline"
        android:background="@color/colorAccent"
        app:layout_anchorGravity="top|right|end"
        android:onClick="favourite"/>

</android.support.design.widget.CoordinatorLayout>